# cpp-gtest-example

./: CMakeLists.txt  Calculator.cpp  README.md
.github/workflows/: ci.yml
test/: test_calculator.cpp
